<resources>
    <!--Temporary values-->
    <string name="first_item_text">1.Development of the interface , the initial screen paragraphs…</string>
    <string name="done_txt_view_text">Виконано - 34%(13)</string>
    <string name="in_process_txt_view_text">В процесі - 14%(5)</string>
    <string name="not_completed_txt_view_text">Не виконано - 52%(23)</string>
    <string name="txt_view_task_title_text">Створення інтерфейсу екрану для повного перегляду</string>
    <string name="item_txt_view_text">1. Створити статус бар і іконки на ньому</string>
    <!--end-->

    <!--content description values-->
    <string name="spinner_arrow_description">spinner bottom right arrow</string>
    <string name="character_counter_text">0/100</string>
    <string name="main_item_icon_content_description">icon description</string>
    <string name="add_new_task_icon_content_description">add new task icon</string>
    <string name="delete_button_icon_content_description">delete button icon</string>
    <string name="txt_char_counter_temp_value">33/50</string>
    <string name="temp_value_of_list_add_item">1.</string>
    <string name="review_icon_description">review icon</string>
    <string name="spinner_item_content_description">spinner item</string>
    <!--end-->

    <!--values for transition-->
    <string name="transition_icon_image">transition:ICON</string>
    <string name="transition_title_name">transition:TITLE</string>
    <string name="PIE_CHART_TEXT">0%</string>
    <!--end-->

    <!--for locale-->
    <string name="app_name">Simple Task Manager</string>
    <string name="main_activity_label">&#160;&#160;All tasks</string>
    <string name="fullTaskActivityLabel">Review</string>
    <string name="new_task_activity_label">New task</string>
    <string name="edit_task_activity_label">Edit</string>

    <string name="add_button_text">ADD</string>
    <string name="edit_button_title">SAVE</string>

    <string name="edit_text_title_hint">Title</string>
    <string name="edit_text_task_item_hint">Please input your task</string>
    <string name="add_new_task_item_text">Add new task</string>

    <string name="edit_menu_item_title">Edit</string>
    <string name="edit_item_title_for_context_menu">Edit</string>
    <string name="delete_item_title_for_context_menu">Delete</string>
    <string name="menu_item_about_title">About</string>

    <string name="bottom_panel_title">Statistics</string>
    <string name="done_count">Done - %1$d%%(%2$d)</string>
    <string name="in_process_count">In process - %1$d%%(%2$d)</string>
    <string name="not_completed_count">Not completed - %1$d%%(%2$d)</string>

    <string name="status_dialog_title">Please choose task status!</string>
    <string name="status_dialog_positive_button_text">OK</string>
    <string name="status_dialog_negative_button_text">Cancel</string>
    <string name="alert_massage_warning">Warning</string>
    <string name="alert_massage_when_task_title_empty">Please set task name</string>
    <string name="alert_massage_when_task_title_item_empty">Please set or delete all empty fields</string>

    <string name="empty_list_hint_text">Create a new task</string>
    <string name="positive_answer">Yes</string>
    <string name="negative_answer">No</string>
    <string name="modified_data_alarm_massage">Do you really want to leave the editing task? All modified data will be lost !</string>
    <string name="notification_ticker_text">There are no completed tasks!</string>
    <string name="notification_content_title">Reminding</string>
    <string name="notification_content_text">Please see the list of tasks. To follow a positive result, do at least several tasks per day.</string>

    <string name="about_label">About</string>
    <string name="author_title">Author</string>
    <string name="author_value">Kazmirchuk Oleksandr</string>
    <string name="version_title">Version</string>
    <string name="version_value">1.0</string>
    <string name="github_title">Github link</string>
    <string name="github_link">https://github.com/AlexKazmirchuk/SimplyTaskManager</string>

    <string-array name="status_dialog_choosing_titles">
        <item>Done</item>
        <item>In process</item>
        <item>Not completed</item>
    </string-array>
    <!--end-->

</resources>
