<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/authorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/authorTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_value"
            android:textSize="18sp"
            android:layout_below="@id/authorTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>
        <View
            android:id="@+id/divider0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c9c9c9"
            android:layout_below="@id/authorTxt"
            android:layout_margin="3dp"/>
        <TextView
            android:id="@+id/versionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/divider0"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/versionTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_value"
            android:textSize="20sp"
            android:layout_below="@id/versionTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>
        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c9c9c9"
            android:layout_below="@id/versionTxt"
            android:layout_margin="3dp"/>
        <TextView
            android:id="@+id/githubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/github_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/divider1"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/linkTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/github_link"
            android:textSize="15sp"
            android:layout_below="@id/githubTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>
    </RelativeLayout>
</ScrollView>

